tests/neg-custom-args/captures/usingLogFile-alt.check
-- Error: tests/neg-custom-args/captures/usingLogFile-alt.scala:18:2 ---------------------------------------------------
18 |  usingFile(  // error
   |  ^^^^^^^^^
   |  reference (file : java.io.OutputStream^{<cap in $anonfun/1>}) is not included in allowed capture set {x$0}
   |
   |  Note that reference (file : java.io.OutputStream^{<cap in $anonfun/1>}), defined at level 1
   |  cannot be included in outer capture set {x$0}, defined at level 0 in package <root>
